--- a/story-template1.html
+++ b/story-template1.html
@@ -105,8 +105,8 @@
       </div>
 
       <div class="col three" style="color: white; font-size: 1.2em;">
-        <i class="fa fa-twitter"></i>&nbsp
-        <i class="fa fa-facebook"></i>
+        <!-- <i class="fa fa-twitter"></i>&nbsp
+        <i class="fa fa-facebook"></i> -->
     </div>
 
         </div>
@@ -138,20 +138,16 @@
 <p class="date">NOVEMBER 4, 2019<p><br><br>
 
 
-<p>Joseph Baynes spent 41 years behind bars, locked up at the age of 17 for his role in a fatal robbery. Convicted of second degree murder in 1975, Baynes received mandatory life without
-parole under Pennsylvania’s stringent sentencing laws.</p><br><br>
+<p>Joseph Baynes spent 41 years behind bars, locked up at the age of 17 for his role in a fatal robbery. Convicted of second degree murder in 1975, Baynes received mandatory life without parole under Pennsylvania’s stringent sentencing laws.</p><br><br>
 
 <p>Baynes' juvenile status and lack of parental supervision at the time of police interrogation
-led to a new trial in 1977. This time, his written statement to the police, which Baynes
-alleges was the result of physical coercion, 4 was excluded from trial.</p><br><br>
+led to a new trial in 1977. This time, his written statement to the police, which Baynes alleges was the result of physical coercion, was excluded from trial.</p><br><br>
 
-<p>But Baynes was again convicted and committed to an adult penitentiary, condemned to die
-in prison.</p><br><br>
+<p>But Baynes was again convicted and committed to an adult penitentiary, condemned to die in prison.</p><br><br>
 
 <p>“I was really petrified,” he said. </p><br><br>
 
-<p>Baynes was just one of Pennsylvania’s 521 juveniles sentenced to mandatory life without
-parole for crimes committed before the age of 18.</p><br><br>
+<p>Baynes was just one of Pennsylvania’s 521 juveniles sentenced to mandatory life without parole for crimes committed before the age of 18.</p><br><br>
 
 <p>The juvenile lifer population in Pennsylvania began to increase in the 1970s, reaching a peak in the 1990s amid fears of a new generation of criminals, the “superpredator” - a prediction that never came into fruition.</p><br><br>
 
@@ -185,18 +181,6 @@ Supreme Court ruled these sentences unconstitutional in Miller vs. Alabama. </p>
 
 <p>Juvenile justice advocates were quick to push for federal courts to retroactively apply the
 Miller ruling in Pennsylvania and for legislators to change the state’s sentencing laws.</p><br><br>
-
-<!-- second graphic container-->
-<div class="incarceration-graph"><br>
-    <div class="graphic-container">
-      <div class="chart-title"><b>Age of juvenile lifers at release</b></div>
-      <div class="chart-description">Inmates in their 40s and 50s made up the largest wave of juvenile lifers released in Pennsylvania in the years following the 2016 Supreme Court ruling in <span style="font-style: italic;">Montgomery v. Louisiana</span>.</div><br>
-      <div class="chart-author">By CAMILA VELLOSO</div><br>
-    </div>
-    <div id="age-released"></div><br>
-    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
-  </div><br><br>  <!-- END second graphic container-->
-
 
 <p>In 2012, the Pennsylvania General Assembly passed 19 Senate Bill 850 for juvenile lifers
 convicted after June of that year that changed sentencing practices for first and second
@@ -244,6 +228,20 @@ eligible for parole, having been awarded credit for time served.</p><br><br>
 court documents. </p><br><br>
 
 <p>Four months later, Baynes was released.</p><br><br>
+
+
+<!-- second graphic container-->
+<div class="incarceration-graph"><br>
+    <div class="graphic-container">
+      <div class="chart-title"><b>Age of juvenile lifers at release</b></div>
+      <div class="chart-description">Inmates in their 40s and 50s made up the largest wave of juvenile lifers released in Pennsylvania in the years following the 2016 Supreme Court ruling in <span style="font-style: italic;">Montgomery v. Louisiana</span>.</div><br>
+      <div class="chart-author">By CAMILA VELLOSO</div><br>
+    </div>
+    <div id="age-released"></div><br>
+    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
+  </div><br><br>  <!-- END second graphic container-->
+
+
 
 <p>Additional changes to Pennsylvania’s procedural requirements in juvenile cases came as a
 result of the Montgomery decision.</p><br><br>
