--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <link href="https://fonts.googleapis.com/css?family=Antic+Didone&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,800&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
 
   <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
@@ -105,7 +106,7 @@
     <div class="centered">
       <p class="line-1 anim-typewriter">Growing Up Behind Bars</p>
 
-      <div id="test"><hr>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      <div id="test"><hr>The United States is the only country in the world that condemns people to life in prison for crimes committed under the age of 18. Yet in the “lock ‘em up” climate of the 1990s, thousands of juveniles were given life sentences without parole. The U.S. Supreme Court has since ruled this unconstitutional. It is estimated more than 2,000 are imprisoned in what the Court says is cruel and unusual punishment. The state of Maryland alone has 312 such juveniles. Almost twenty-five years passed without a singe parole.</div>
 
     </div>
 
@@ -133,7 +134,10 @@
     <!-- <h1 style="padding-bottom:1em;">"I made a mistake"</h1>-->
     <p class="opening-text"> Maryland is one of three states where the governor must sign paroles for lifers. In the wake of a Willie Horton-like case in 1995, Democratic governor Parris Glendening joined the tough-on-crime crowd. No matter how good the behavior in prison, he declared, “life means life” - an absolutism he has come to regret. But for many juvenile lifers who expected to be paroled after 15 years, the state did not keep its end of the bargain.</p><br>
 
-    <hr style="width:20%; border:1px solid white;"><br><br>
+    <hr style="width:20%; border:1px solid white;">
+
+    <h1>Unequal Justice</h1><br>
+    <p class="caption">The story of Maryland’s juvenile lifers and their years without parole was told on the PBS NewsHour by senior correspondent John Yang. The story was researched, shot, and edited by students of the University of Maryland’s Phillip Merrill College of Journalism.</p><br>
 
     <div class="pbs-video">
       <div class="embed-responsive embed-responsive-16by9">
