--- a/profile.html
+++ b/profile.html
@@ -54,6 +54,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,800&display=swap" rel="stylesheet">
 
+      <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
   <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
@@ -92,8 +93,8 @@
     </div>
 
     <div class="col three" style="color: white; font-size: 1.2em;">
-      <i class="fa fa-twitter"></i>&nbsp
-      <i class="fa fa-facebook"></i>
+      <!--<i class="fa fa-twitter"></i>&nbsp
+      <i class="fa fa-facebook"></i> -->
   </div>
 
       </div>
@@ -103,10 +104,8 @@
 
 <div class="width">
     <div class="content">
-        <h1> OCTOBER 17, 2019</h1><br>
         <h2> 34 Years To Freedom </h2><br>
         <h3>Sentenced to life for murder, Earl Young spent over half of his life incarcerated. Recently released, Young now has a new lease on life. </h3><br>
-        <h4>By DELON THORTON and CAMILA VELLOSO</h4>
     </div>
   </div>
 
@@ -120,15 +119,66 @@
 <!-- START Main Story Container -->
 
 <div class="story-container">
-  <a name="story"><div class="container"></a><br><br><br>
+  <a name="story"><div class="container"></a><br><br>
+
+    <p style="text-align: center;"><i class="fab fa-facebook-f"></i> &nbsp <i class="fab fa-twitter-square"></i></p>
+
+    <p class="author">By <span>DELON THORNTON</span> and <span>CAMILA VELLOSO</span> <br></p>
+
+    <p class="date">NOVEMBER 4, 2019</p><br><br>
+
+    <p>Earl Young spent 34 years and 7 months incarcerated. Arrested at 16 in 1984 with no prior record, Young was convicted of murder, armed robbery and illegal possession of a firearm. A year later he was sentenced to concurrent sentences of the balance of his natural life for murder, ten years for the armed robbery and 3 years for posession of a weapon.</p><br><br>
+
+    <p>Young struggled his first years in prison.
+    “I refused to do a lot of things when I went into the system,” Young said. “I was bitter.”
+    Like most lifers in Maryland, Young was sent to a maximum security prison.</p><br><br>
+
+    <div class="video-content">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
+      </div>
+      <div class="video-caption">Video edited by DeLon Thornton | Capital News Service</div>
+    </div><br>
 
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+    <p>Young eventually got serious about his life and earned his GED in 1993. He passed the exam on his first try. But his college dreams were cut short with the passage of Clinton’s Violent Crime Control and Law Enforcement Act  in 1994, which curtailed federal pell grant funding for higher-education programs in prison.</p><br><br>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+    <p>He ended up losing much more. His parents, sister, cousin and mother-in-law died during his incarceration.</p><br><br>
+
+    <p>“As the clock kept ticking, those who knew me were dwindling death,” Young said.</p><br><br>
+
+    <p>But not all hope was lost. Young said being in prison helped him grow and develop as a person. He made it through with the guidance and nurturing of other prisoners and staff.</p><br><br>
+
+    <p>Despite being a model prisoner, the parole board continually passed on paroling or commuting Young’s sentence because of Glendening’s “life means life” policy.</p><br><br>
+
+    <p>He was denied six times for parole.</p><br><br>
+
+    <div class="video-content">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
+      </div>
+      <div class="video-caption">Video edited by DeLon Thornton | Capital News Service.</div>
+    </div><br>
 
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+    <p>His life sentence was first commuted to a sentence to 49 years plus “good time.” He was paroled on January 5, 2019. He stayed at a medium security prison until April due a shortage of case managers. “There were 5 councilors for 800 people. It was grossly understaffed,” Young said. He was supposed to go directly into the pre-release system, but instead was transferred to a minimum security prison.</p><br><br>
+
+    <p>He only left Jessup Correctional Institution, a maximum security prison, on May 15. He was then sent to a minimum security prison, where he remained for 4-5 weeks before case managers at the prison realized he was wasn’t supposed to be there. They immediately sent him to a pre-release unit in Baltimore. He was released on July 18, 2019.
+    And after three decades behind bars, Young finally went home to the only family he has left, his wife of six years.</p><br><br>
+
+    <p>By Young’s calculations, he was only supposed to serve 15 years minus diminution credits. And after three decades behind bars, Young finally went home to the only family he has left, his wife of six years.</p><br><br>
+
+    <p>Now, he works with kids in the Baltimore public school system, determined to keep them from going down the same path.</p><br><br>
+
+    <p>“When I left the streets, I was their age,” Young said. “I’m just doing my little part. If we all do our little parts, we’ll make a difference.”</p><br><br>
+
+    <p>There are still some remnants of prison Young can’t shake. He cycles to work every day and likes playing handball.</p><br><br>
+
+    <p>“I'm scared to not be in shape,” Young said
+    But perhaps more consequentially, Young feels the weight of leaving friends behind.</p><br><br>
+
+    <p>Young hopes to effect change for over 200 parole-eligible juvenile lifers by telling his story.   </p><br><br>
+
 
 
 
