--- a/story-template1.html
+++ b/story-template1.html
@@ -129,13 +129,11 @@
 <div class="story-container">
   <a name="story"><div class="container"></a><br><br>
 
-    <p style="text-align: center;"><i class="fab fa-facebook-f"></i> &nbsp <i class="fab fa-twitter-square"></i>
+    <p style="text-align: center;"><i class="fab fa-facebook-f"></i> &nbsp <i class="fab fa-twitter-square"></i></p>
 
-</p>
+<p class="author">By <span>CAMILA VELLOSO</span></p>
 
-<p class="author">By <span>CAMILA VELLOSO</span> <br>
-
-<p class="date">NOVEMBER 4, 2019<p><br><br>
+<p class="date">NOVEMBER 4, 2019</p><br><br>
 
 
 <p>Joseph Baynes spent 41 years behind bars, locked up at the age of 17 for his role in a fatal robbery. Convicted of second degree murder in 1975, Baynes received mandatory life without parole under Pennsylvania’s stringent sentencing laws.</p><br><br>
@@ -394,7 +392,9 @@ state’s entire juvenile lifer population.</p><br><br>
 
     <p class="pa-county-description">Click through different PA counties to see the total juvenile population and status of those cases.</p>
 
-    <p class="pa-county-credits">Map design: Ally Tobler, Capital News Service</p><br>
+    <p class="pa-county-author">MAP DESIGN: ALLY TOBLER</p>
+
+    <p class="pa-county-credits">Source: Pennsylvania Department of Corrections</p><br>
 
 </div>
 </div><!-- CLOSE main story -->
