--- a/index.html
+++ b/index.html
@@ -132,7 +132,35 @@
       <!-- <hr style="border: 1px solid #CAEBF2; width:20%;"> -->
 
     <!-- <h1 style="padding-bottom:1em;">"I made a mistake"</h1>-->
-    <p class="opening-text"> Maryland is one of three states where the governor must sign paroles for lifers. In the wake of a Willie Horton-like case in 1995, Democratic governor Parris Glendening joined the tough-on-crime crowd. No matter how good the behavior in prison, he declared, “life means life” - an absolutism he has come to regret. But for many juvenile lifers who expected to be paroled after 15 years, the state did not keep its end of the bargain.</p><br>
+    <p class="opening-text"> In many places, “equal justice under law” rings false. Justice is particularly unequal in
+Maryland, a traditionally progressive breeding ground for liberal policy. The Supreme
+Court ruled in 2016 that juvenile life without parole is unconstitutional no matter when a
+defendant was sentenced. Yet in Maryland, some 300 juveniles are held in a prison
+system that’s gone nearly 25 years without a single parole.<br><br>
+Maryland is one of only three states that requires a governor’s signature to grant parole.
+This system functioned until the 1990s, when heightening crime rates spurred “tough on
+crime” policies and public demonization of prisoners. Crime and punishment became a
+hot issue in Maryland in 1993, when “model inmate” Rodney Stokes killed his former
+girlfriend and himself while on work release, the last step before parole. <br><br>
+
+The issue became the center of the gubernatorial elections in 1994. In an effort to better
+low approval ratings and address the crime issue, new Democratic governor Parris
+Glendening announced his “life means life” policy in his first year in office. It meant he
+would never sign parole for lifers. All Maryland governors followed suit until 2019, when
+current Gov. Larry Hogan paroled a handful of lifers. <br><br>
+Glendening’s decision delayed lifers’ releases indefinitely, including even those whose
+papers were already on his desk. “Life means life” is de-facto life without parole for
+juvenlie lifers in Maryland, though they were originally sentenced to life with the
+opportunity for parole. The Supreme Court has said that juveniles must have a
+“meaningful opportunity for release.” The state of Maryland argues that commutations
+granted by governors over the years meet this standard. But advocates say those
+opportunities are more like winning the lottery than earning parole.<br><br>
+Glendening has since renounced his “life means life” decision. He’s said repeatedly in
+public that it was wrong and should be changed legislatively in a potential bill that would
+completely remove the governor from the parole process. Now, the issue is facing more
+pressure from a 2016 ACLU lawsuit suing Hogan for denying juvenile lifers a meaningful
+opportunity for release. The case remains in court proceedings and Maryland’s juvenile
+lifers remain in prison, waiting.</p><br>
 
     <hr style="width:20%; border:1px solid white;">
 
