--- a/story-template1.html
+++ b/story-template1.html
@@ -97,7 +97,7 @@
       <div id="tophat">
         <div class="row">
           <div class="col  one">
-            <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp <span class="break">SERIES | UNEQUAL JUSTICE</span></a>
+            <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp SERIES | UNEQUAL JUSTICE</a>
         </div>
 
         <div class="col">
@@ -392,6 +392,8 @@ state’s entire juvenile lifer population.</p><br><br>
 
     <p class="pa-county-description">Click through different PA counties to see the total juvenile population and status of those cases.</p>
 
+      <!-- Mobile text without leaflet map --><p class="pa-county-description-mobile">In over three years, Pennsylvania dramatically decreased the number of juvenil lifers incarcerated in the state, giving most a second chance.</p>
+
     <p class="pa-county-author">MAP DESIGN: ALLY TOBLER</p>
 
     <p class="pa-county-credits">Source: Pennsylvania Department of Corrections</p><br>
@@ -408,22 +410,18 @@ state’s entire juvenile lifer population.</p><br><br>
     <div id="mapid"></div>
   </div>
 
-  <!--<div class="hide-until-mobile">
+<!-- Hides Leaflet map for mobile -->
+  <div class="hide-until-mobile">
 
     <div class="row">
       <div class="col-sm-12">
-        <div class="county_nam">PENNSYLVANIA</div>
+        <img src="images/map.png">
       </br>
       </div>
     </div>
+  </div>
 
-    <div class="row">
-      <ul>
-        <li>
-      </ul>
-    </div>
 
-  </div> -->
 
   <div class="col-lg-6 col-md-12 col-sm-12">
 
