--- a/three-states.html
+++ b/three-states.html
@@ -113,7 +113,7 @@
 
       </div>
 
-      <div class="cover-img relative-img" style="background-image: url('images/prison-header.jpg')"></div>
+      <div class="cover-img relative-img" style="background-image: url('images/jail-cell.png')"></div>
       <div class="centered">
         <div class="article-title">Incarcerated For Life</span></div><br>
         <div class="article-desc">The United States is the only country in the world that condems juveniles to spend their entire lives in prison. Along with Maryland and Pennsylvania, Louisiana, Michigan and Florida harbor the largest juvenile lifer populations in the nation.</div><br>
@@ -143,7 +143,7 @@
 
 <div class="border"></div><br>
 
-<p class="state"><img src="images/michigan.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp MICHIGAN</p><br><br>
+<p class="state"><img src="images/michigan1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp MICHIGAN</p><br><br>
 
 <p>Prosecutors and victims’ families in Michigan pressed to keep life-without-parole sentences in place. They pointed to the exception granted by the U.S. Supreme Court in2016, “for the rarest of juvenile
 offenders, those whose crimes reflect permanent incorrigibility.” </p><br><br>
@@ -197,7 +197,7 @@ cases. It wasn’t until June, 2018 that Chief Justice Stephen Markman, writing 
 
 <div class="border"></div><br>
 
-<p class="state"><img src="images/louisiana.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp LOUISIANA</p><br><br>
+<p class="state"><img src="images/louisiana1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp LOUISIANA</p><br><br>
 
 <p>At the time of the 2016 Supreme Court ruling on juvenile lifers, Louisiana prosecutors were allowed to seek life without parole for juveniles who were convicted of first or second-degree murder. That year a bill was proposed to make juveniles make juvenile lifers eligible for parole after 30 years. It was killed in the Senate. On June 15, 2017 Gov. John Bel Edwards signed the most comprehensive criminal reform package in the state history. It was aimed at shedding the state’s ranking as having the nations highest imprisonment rate.</p><br><br>
 
