--- a/other-states.html
+++ b/other-states.html
@@ -52,7 +52,7 @@
 
 
     <!-- our CSS  -->
-    <link rel="stylesheet" href="css/common3.css">
+    <link rel="stylesheet" href="css/common2.css">
 
     <!-- Required for sidescroll -->
     <link rel="stylesheet" href="css/scroll-style.css">
@@ -97,7 +97,7 @@
       <div id="tophat">
         <div class="row">
           <div class="col  one">
-            <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp SERIES | UNEQUAL JUSTICE</a>
+            <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp <span class="hide">SERIES | UNEQUAL JUSTICE</span></a>
         </div>
 
         <div class="col">
@@ -113,9 +113,9 @@
 
       </div>
 
-      <div class="cover-img relative-img" style="background-image: url('images/senate-chamber.jpg')"></div>
+      <div class="cover-img relative-img" style="background-image: url('images/jail-cell.png')"></div>
       <div class="centered">
-        <div class="article-title">In The Governor's Hands</span></div><br>
+        <div class="article-title">Incarcerated For Life</span></div><br>
         <div class="article-desc">The United States is the only country in the world that condems juveniles to spend their entire lives in prison. Along with Maryland and Pennsylvania, Louisiana, Michigan and Florida harbor the largest juvenile lifer populations in the nation.</div><br>
         <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
       </div>
@@ -131,46 +131,93 @@
 
     <p style="text-align: center;"><i class="fab fa-facebook-f"></i> &nbsp <i class="fab fa-twitter-square"></i></p>
 
-<p class="author">By <span>SARA SALIMI</span> and <span>JAMIE KERNER</span></p>
+<p class="author">By <span>DOMINIQUE JANIFER, LAUREN PERRY</span><br> and <span>ATHIYAH AZEEM </span></p>
 
 <p class="date">NOVEMBER 4, 2019</p><br><br>
 
 
-<p>Maryland is one of only three states in which the governor makes the final decision on parole. The other two are Oklahoma and California. No two states could be responding more differently.
+<p>In the 1990s, politicians tried to outdo one another on who was tougher on crime. George H. W. Bush successfully labeled his presidential opponent, Michael Dukakis, as being someone who coddled criminals. In that climate, the United States became the only country that condemns people to spend their lives behind bars for crimes they committed before they turned 18.
 </p><br><br>
 
-<div class="border"></div><br>
-
-<p class="state"><img src="images/california.png" alt="Smiley face" width="150" height="137" align="middle"> CALIFORNIA</p><br><br>
-
-<p>While Maryland and Oklahoma have been slow to change their juvenile parole procedures, California governors vowed to change theirs—and largely have.
-Gov. Jerry Brown took action within months of the U.S. Supreme Court’s 2012 ban on mandatory life sentences without parole for juvenile offenders. He signed Senate Bill 9 in January 2013. That allowed those given life without parole as juveniles to request a new sentencing hearing.</p><br><br>
-
-<p>In 2016 the U.S. Supreme Court mad it clear that its 2012 decision applied retroactively. In 2017 Gov. Brown signed Senate Bill 394 which outlawed life without parole sentences. It required that juveniles serving life sentences be given a parole hearing 25 years after being convicted.</p><br><br>
-
-<p>Brown’s successor, Gov. Gavin Newsom, went further, vowing in January 2019 to “end the juvenile justice system as we know it.” He proposes moving the Division of Juvenile Justice from the California Dept. of Corrections and Rehabilitation and placing it under the supervision of the Health and Human Services Agency. “Juvenile justice should be about helping kids imagine and pursue new lives — not jumpstarting the revolving door of the criminal justice system,” Newsom said. “The system should be helping these kids unpack trauma and adverse experiences many have suffered.“</p><br><br>
-
-<p>In March Newsom suspended executions for as long as he is in office.  In September he granted clemency to 21 violent offenders in California. Seven of those had been sentenced to life without parole. Clemency does not free them but allows these individuals to have their cases considered by a parole board. Republicans criticized Newsom saying, “Where is the compassion for the crime victims and their families?”</p><br><br>
-
-<p>Newsom’s office stated that the governor considered several factors, including “the circumstances of the crime and the sentence imposed, the applicant’s conduct while in prison and the applicant’s self-development efforts since the offense, including whether they have made use of available rehabilitative programs and addressed treatment needs.”</p><br><br>
-
+<p>Beyond Pennsylvania, three other states had large numbers of juvenile lifers without parole: Michigan, Florida, and Louisiana. None has come close to Pennsylvania’s response to the Supreme Court’s mandate.</p><br><br>
 
 <div class="border"></div><br>
 
-<p class="state"><img src="images/oklahoma.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp OKLAHOMA</p><br><br>
+<p class="state"><img src="images/michigan1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp MICHIGAN</p><br><br>
+
+<p>Prosecutors and victims’ families in Michigan pressed to keep life-without-parole sentences in place. They pointed to the exception granted by the U.S. Supreme Court in2016, “for the rarest of juvenile
+offenders, those whose crimes reflect permanent incorrigibility.” </p><br><br>
+
+<p>They appealed to the Michigan Supreme Court seeking a path for preserving life without parole. That case delayed action on many of the
+cases. It wasn’t until June, 2018 that Chief Justice Stephen Markman, writing for the majority said that a trial judge doesn’t need to find any particular fact before sentencing with life without parole. He wrote: “If the trial court simply finds that there are no mitigating circumstances, it can sentence a juvenile to life without parole.”</p><br><br>
 
 
-<p>The 2016 Supreme Court ruling has had minimal impact on juvenile lifers in Oklahoma, where politicians have a history of being tough on violent crime.  At the time of the decision 43 prisoners in Oklahoma serving life-without-parole sentences for crimes they committed while juveniles, according to Tim Laughlin, of the state’s Oklahoma Indigent Defense System.</p><br><br>
+<!-- first graphic container-->
+<div class="incarceration-graph">
+    <div class="graphic-container">
+      <div class="chart-title"><b>Incarceration rates for juvenile lifers in Michigan</b></div>
+      <div class="chart-description">The number of black juveniles sentenced to life without parole spiked in the '90s, but decreased for white juveniles.</div><br>
+      <div class="chart-author">By CAMILA VELLOSO</div><br>
+    </div>
+    <div id="incarceration"></div><br>
+    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
+  </div><br><br>  <!-- END first graphic container-->
 
-<p>“It’s not all inclusive, but the ones we identified, at least initially, to the best of our abilities were about 43,” Laughlin said. In 2016 the Oklahoma Court of Criminal Appeals spelled out new sentencing guidelines saying that juries could not impose life-without-parole unless “you find beyond a reasonable doubt that the defendant is irreparably corrupt and permanently incorrigible.”</p><br><br>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
 
-<p>The legislature attempted to reverse that, passing a bill granting judges the right to give juveniles life with no parole. Gov. Mary Fallin vetoed it.</p><br><br>
 
-<p>Oklahoma state law states that a defendant must file proper paperwork to request a lawyer, and public defenders are unable to enter a criminal case and represent a defendant unless a judge appoints them to do so. </p><br><br>
+  <!-- first graphic container-->
+  <div class="incarceration-graph">
+      <div class="graphic-container">
+        <div class="chart-title"><b>Resentencing rates for juvenile lifers in Michigan</b></div>
+        <div class="chart-description">Of the 181 inmates resentenced in Michigan, the rate of resentencing for black juveniles dropped after 2017, but has been rising for white juveniles.</div><br>
+        <div class="chart-author">By CAMILA VELLOSO</div><br>
+      </div>
+      <div id="incarceration2"></div><br>
+      <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
+    </div><br><br>  <!-- END first graphic container-->
 
-<p>“Our statute doesn’t allow us to initiate post conviction applications in non- death penalty cases,” Laughlin said. “At this point, it’s incumbent on the individual to file a post conviction application.”</p><br><br>
+<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br><br>
 
-<p>That has severely limited the initial number of prisoners being resentenced. Only seven out of the eligible juvenile life-without-parole prisoners have been re-sentenced, according to The Frontier. (Links to an external site.) Most still have life-without-parole sentences. Since 2016 no juvenile lifter has been paroled by either of two governors.</p><br><br>
+<div class="border"></div><br>
+
+<p class="state"><img src="images/florida1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp FLORIDA</p><br><br>
+
+<p>For juvenile lifers in Florida, resentencing is likely only after a long imprisonment. State law and Florida Supreme Court decisions have followed the state’s “tough on crime” pattern.</p><br><br>
+
+<p>Faced with a high violent crime rate, in 1995 Florida passed legislation that any lifer incarcerated after that date would have mandatory life without parole.</p><br><br>
+
+<p>After the United States Supreme Court ruling on juveniles in 2012, legislators amended the law in 2014. Juveniles who committed murder would be eligible for review by a judge after 25 years.</p><br><br>
+
+<p>After challenges seeking individual resentencing reviews, 2018 the Florida Supreme Court put the matter to rest. It ruled that juveniles sentenced to life with the possibility of parole after 25 years indeed had meaningful opportunity for release, and thus are not entitled to further resentencing review. </p><br><br>
+
+<p>In June of 2019 Governor Ron Desantis signed a criminal justice reform package that many criticize as being watered down. Still it represents change, if only in at attempt to reduce the state’s massive prison population.</p><br><br>
+
+<p>The bill also creates a task force to reevaluate Florida’s entire criminal punishment code, examining whether the set punishments fit the crime.</p><br><br>
+
+<div class="border"></div><br>
+
+<p class="state"><img src="images/louisiana1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp LOUISIANA</p><br><br>
+
+<p>At the time of the 2016 Supreme Court ruling on juvenile lifers, Louisiana prosecutors were allowed to seek life without parole for juveniles who were convicted of first or second-degree murder. That year a bill was proposed to make juveniles make juvenile lifers eligible for parole after 30 years. It was killed in the Senate. On June 15, 2017 Gov. John Bel Edwards signed the most comprehensive criminal reform package in the state history. It was aimed at shedding the state’s ranking as having the nations highest imprisonment rate.</p><br><br>
+
+<p>Prior to the reform package, the criminal reform package gives juvenile lifers an opportunity for parole after 25 years. Facing opposition from the families of murder victims, the legislature amended the bill to allow district attorneys to petition judges for life
+without parole in the case of first-degree murder.</p><br><br>
+
+
+
+<!-- second graphic container-->
+<div class="incarceration-graph"><br>
+    <div class="graphic-container">
+      <div class="chart-title"><b>Length of new prison terms</b></div>
+      <div class="chart-description">In Michigan, 181 juvenile lifers received resentences with new minimum and maximum prison terms. </div><br>
+      <div class="chart-author">By CAMILA VELLOSO</div><br>
+    </div>
+    <div id="age-released"></div><br>
+    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
+  </div><br><br>  <!-- END second graphic container-->
+
+<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br><br>
 
 </div>
 </div>
@@ -218,7 +265,10 @@ Gov. Jerry Brown took action within months of the U.S. Supreme Court’s 2012 ba
 
                color: {
                  pattern: ['#78A6DD', '#D9B168', '#27548C', '#689AD9', '#973895']
-               }
+               },
+               axis: {
+        rotated: true
+    }
            });
 
 
