--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
     <div id="tophat">
       <div class="row">
         <div class="col one">
-          <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp SERIES | UNEQUAL JUSTICE</a>
+          <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp <span class="hide">SERIES | UNEQUAL JUSTICE</span></a>
       </div>
 
       <div class="col">
