--- a/profile.html
+++ b/profile.html
@@ -116,10 +116,22 @@
 
 </div> <!-- END Hero Container -->
 
+<!-- TOP JUST FOR MOBILE -->
+    <div class="mobile-container">
+      <div class="home-icon"><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i></div>
+      <img class="image-earl" src="images/earl-header-mobile.jpg">
+    </div>
+
+
+
 <!-- START Main Story Container -->
 
 <div class="story-container">
   <a name="story"><div class="container"></a><br><br>
+
+      <!-- TITLE JUST FOR IPAD AND IPHONE -->
+      <div class="mobile-title">34 Years To Freedom</div>
+      <div class="mobile-description">Sentenced to life for murder, Earl Young spent over half of his life incarcerated. Recently released, Young now has a new lease on life.<br><br></div>
 
     <p style="text-align: center;"><i class="fab fa-facebook-f"></i> &nbsp <i class="fab fa-twitter-square"></i></p>
 
