--- a/other-states.html
+++ b/other-states.html
@@ -113,7 +113,7 @@
 
       </div>
 
-      <div class="cover-img relative-img" style="background-image: url('images/jail-cell.png')"></div>
+      <div class="cover-img relative-img" style="background-image: url('images/wire.png')"></div>
       <div class="centered">
         <div class="article-title">Incarcerated For Life</span></div><br>
         <div class="article-desc">The United States is the only country in the world that condems juveniles to spend their entire lives in prison. Along with Maryland and Pennsylvania, Louisiana, Michigan and Florida harbor the largest juvenile lifer populations in the nation.</div><br>
