--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="centered">
       <p class="line-1 anim-typewriter">Growing Up Behind Bars</p>
 
-      <div id="test"><hr>The United States is the only country in the world that condemns people to life in prison for crimes committed under the age of 18. Yet in the “lock ‘em up” climate of the 1990s, thousands of juveniles were given life sentences without parole. The U.S. Supreme Court has since ruled this unconstitutional. It is estimated more than 2,000 are imprisoned in what the Court says is cruel and unusual punishment. The state of Maryland alone has 312 such juveniles. Almost twenty-five years passed without a singe parole.</div>
+      <div id="test"><hr>The United States is the only country in the world that condemns people to life in prison for crimes committed under the age of 18. Yet in the “lock ‘em up” climate of the 1990s, thousands of juveniles were given life sentences without parole.</div>
 
     </div>
 
@@ -132,35 +132,7 @@
       <!-- <hr style="border: 1px solid #CAEBF2; width:20%;"> -->
 
     <!-- <h1 style="padding-bottom:1em;">"I made a mistake"</h1>-->
-    <p class="opening-text"> In many places, “equal justice under law” rings false. Justice is particularly unequal in
-Maryland, a traditionally progressive breeding ground for liberal policy. The Supreme
-Court ruled in 2016 that juvenile life without parole is unconstitutional no matter when a
-defendant was sentenced. Yet in Maryland, some 300 juveniles are held in a prison
-system that’s gone nearly 25 years without a single parole.<br><br>
-Maryland is one of only three states that requires a governor’s signature to grant parole.
-This system functioned until the 1990s, when heightening crime rates spurred “tough on
-crime” policies and public demonization of prisoners. Crime and punishment became a
-hot issue in Maryland in 1993, when “model inmate” Rodney Stokes killed his former
-girlfriend and himself while on work release, the last step before parole. <br><br>
-
-The issue became the center of the gubernatorial elections in 1994. In an effort to better
-low approval ratings and address the crime issue, new Democratic governor Parris
-Glendening announced his “life means life” policy in his first year in office. It meant he
-would never sign parole for lifers. All Maryland governors followed suit until 2019, when
-current Gov. Larry Hogan paroled a handful of lifers. <br><br>
-Glendening’s decision delayed lifers’ releases indefinitely, including even those whose
-papers were already on his desk. “Life means life” is de-facto life without parole for
-juvenlie lifers in Maryland, though they were originally sentenced to life with the
-opportunity for parole. The Supreme Court has said that juveniles must have a
-“meaningful opportunity for release.” The state of Maryland argues that commutations
-granted by governors over the years meet this standard. But advocates say those
-opportunities are more like winning the lottery than earning parole.<br><br>
-Glendening has since renounced his “life means life” decision. He’s said repeatedly in
-public that it was wrong and should be changed legislatively in a potential bill that would
-completely remove the governor from the parole process. Now, the issue is facing more
-pressure from a 2016 ACLU lawsuit suing Hogan for denying juvenile lifers a meaningful
-opportunity for release. The case remains in court proceedings and Maryland’s juvenile
-lifers remain in prison, waiting.</p><br>
+    <p class="opening-text">The U.S. Supreme Court has since ruled this unconstitutional. It is estimated more than 2,000 are imprisoned in what the Court says is cruel and unusual punishment. The state of Maryland alone has 312 such juveniles. Almost twenty-five years passed without a singe parole. </p><br>
 
     <hr style="width:20%; border:1px solid white;">
 
@@ -171,25 +143,69 @@ lifers remain in prison, waiting.</p><br>
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
       </div>
-      <p class="video-caption">Video courtesy PBS NewsHour, produced in partnership with the Howard Center for Investigative Journalism and Capital News Service. It was produced by John Yang of PBS NewsHour and Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton of Capital News Service.</p>
+      <p class="video-caption">Video courtesy PBS NewsHour, produced by John Yang of PBS NewsHour and Emily Top, Camila Velloso, Hannah Gaskill, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton of Capital News Service.</p>
     </div><br>
 
+<hr style="width:20%; border:1px solid white;">
+      <br>
+    <div class="row">
+      <div class="col-lg-3 col-md-12 col-sm-12">
+        <a href="#"><img src="images/gavel.jpg" alt="..." style="float:left;"></a>
+      </div>
+      <div class="col-lg-9 col-md-12 col-sm-12">
+        <h3>October 16, 2019</h3>
+        <a href="story-template1.html" style="color: white;"><h4>The Glendening Legacy</h4></a>
+        <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p class="author-two"> BY LYNSEY JEFFREY </p>
+      </div>
+    </div><br><br>
 
-    <!-- <p class="caption">Video courtesy PBS NewsHour, produced in partnership with Injustice Watch and Capital News Service. It was produced by John Yang of PBS NewsHour and Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton of Capital News Service.</p><br>-->
-
-
-    <h1>The Glendening Legacy</h1>
+    <div class="row">
+      <div class="col-lg-3 col-md-12 col-sm-12">
+        <a href="#"><img src="images/prison.jpg" alt="..." style="float:left;"></a>
+      </div>
+      <div class="col-lg-9 col-md-12 col-sm-12">
+        <h3>October 16, 2019</h3>
+        <a href="story-template1.html" style="color: white;"><h4>The Hogan Era</h4></a>
+        <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p class="author-two"> BY HANNAH GASKILL </p>
+      </div>
+    </div><br>
+<!--<h1>The Glendening Legacy</h1> -->
     <!-- <p class="author"> BY AUTHOR NAME </p>
     <p class="date"> December 15, 2019</p><br> -->
-    <p class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br>
-    <a href="#"><p class="more">READ MORE: Maryland juvenile lifers denied meaningful opportunity for release despite parole-eligible sentences <p></a><br><br>
+<!--    <p class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br>
+    <a href="#"><p class="more">READ MORE: Maryland juvenile lifers denied meaningful opportunity for release despite parole-eligible sentences <p></a><br><br> -->
 
-      <h1>The Hogan Era</h1>
+      <!-- <h1>The Hogan Era</h1> -->
       <!-- <p class="author"> BY AUTHOR NAME </p>
       <p class="date"> December 15, 2019</p><br> -->
-      <p class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br>
+      <!-- <p class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br>
       <a href="#"><p class="more">READ MORE: Maryland juvenile lifers denied meaningful opportunity for release despite parole-eligible sentences <p></a><br><br>
 
+  -->
+
+        <hr style="border: 1px solid white; width:20%;">
+            <h1>Meet the juvenile lifers</h1>
+            <p class="opening-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+
+            <div class="row">
+
+              <div class="col-sm-12 col-md-12 col-lg-4">
+                <img src="images/earl-young.jpg" style="width:100%;">
+              </div>
+              <div class="col-sm-12 col-md-12 col-lg-4">
+                <img src="images/mary-bey.jpg" style="width:100%;">
+              </div>
+              <div class="col-sm-12 col-md-12 col-lg-4">
+                <img src="images/calvin-mcneill.jpg" style="width:100%;">
+              </div>
+
+              <a href="#"><p class="more">WATCH: Maryland juvenile lifers denied meaningful opportunity for release despite parole-eligible sentences <p></a><br><br>
+
+            </div>
+
+<!--
 <hr style="border: 1px solid white; width:20%;">
     <h1>Meet the juvenile lifers</h1>
     <p class="opening-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
@@ -251,7 +267,7 @@ lifers remain in prison, waiting.</p><br>
 
         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/155464242&color=%23cc9072&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
-         </div>
+      </div> -->
 
   </div><br><!-- END Maryland Container -->
 
@@ -259,7 +275,7 @@ lifers remain in prison, waiting.</p><br>
 
   <div id="nation-container"><br>
 
-    <p class="opening-text">America’s incarceration rate is the highest in the world. Nearly 2.3 million people are currently locked up. Tough-on-crime policies from the 90s drastically increased the country’s prison population. States cracked down on juvenile crimes amid fears of a new generation of criminals - the “superpredator.” In the early 2000s, the Supreme Court established different sentencing standards for juveniles on four different occasions. The Court prohibited juvenile life without parole sentences in 2010 and made that decision retroactive in 2016. Here's how some states have responded to the rulings: </p><br>
+    <p class="opening-text">Nearly 2.3 million people are currently locked up. Tough-on-crime policies from the 90s drastically increased the country’s prison population. States cracked down on juvenile crimes amid fears of a new generation of criminals - the “superpredator.” In the early 2000s, the Supreme Court established different sentencing standards for juveniles on four different occasions. The Court prohibited juvenile life without parole sentences in 2010 and made that decision retroactive in 2016. Here's how some states have responded to the rulings: </p><br>
     <hr style="width:20%; border:1px solid white;"><br><br>
 
     <div class="row">
