--- a/story-template2.html
+++ b/story-template2.html
@@ -97,7 +97,7 @@
       <div id="tophat">
         <div class="row">
           <div class="col  one">
-            <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp <span class="hide">SERIES | UNEQUAL JUSTICE</span></a>
+            <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp SERIES | UNEQUAL JUSTICE</a>
         </div>
 
         <div class="col">
@@ -113,7 +113,7 @@
 
       </div>
 
-      <div class="cover-img relative-img" style="background-image: url('images/wire.png')"></div>
+      <div class="cover-img relative-img" style="background-image: url('images/prison-header.jpg')"></div>
       <div class="centered">
         <div class="article-title">Incarcerated For Life</span></div><br>
         <div class="article-desc">The United States is the only country in the world that condems juveniles to spend their entire lives in prison. Along with Maryland and Pennsylvania, Louisiana, Michigan and Florida harbor the largest juvenile lifer populations in the nation.</div><br>
@@ -143,7 +143,7 @@
 
 <div class="border"></div><br>
 
-<p class="state"><img src="images/michigan1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp MICHIGAN</p><br><br>
+<p class="state"><img src="images/michigan.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp MICHIGAN</p><br><br>
 
 <p>Prosecutors and victims’ families in Michigan pressed to keep life-without-parole sentences in place. They pointed to the exception granted by the U.S. Supreme Court in2016, “for the rarest of juvenile
 offenders, those whose crimes reflect permanent incorrigibility.” </p><br><br>
@@ -179,22 +179,9 @@ cases. It wasn’t until June, 2018 that Chief Justice Stephen Markman, writing 
 
 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br><br>
 
-<!-- third graphic container-->
-<div class="incarceration-graph"><br>
-    <div class="graphic-container">
-      <div class="chart-title"><b>Length of new prison terms</b></div>
-      <div class="chart-description">In Michigan, 181 juvenile lifers received resentences with new minimum and maximum prison terms. </div><br>
-      <div class="chart-author">By CAMILA VELLOSO</div><br>
-    </div>
-    <div id="age-released"></div><br>
-    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
-  </div><br><br>  <!-- END third graphic container-->
-
-  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br><br>
-
 <div class="border"></div><br>
 
-<p class="state"><img src="images/florida1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp FLORIDA</p><br><br>
+<p class="state"><img src="images/florida.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp FLORIDA</p><br><br>
 
 <p>For juvenile lifers in Florida, resentencing is likely only after a long imprisonment. State law and Florida Supreme Court decisions have followed the state’s “tough on crime” pattern.</p><br><br>
 
@@ -210,7 +197,7 @@ cases. It wasn’t until June, 2018 that Chief Justice Stephen Markman, writing 
 
 <div class="border"></div><br>
 
-<p class="state"><img src="images/louisiana1.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp LOUISIANA</p><br><br>
+<p class="state"><img src="images/louisiana.png" alt="Smiley face" width="150" height="137" align="middle">&nbsp LOUISIANA</p><br><br>
 
 <p>At the time of the 2016 Supreme Court ruling on juvenile lifers, Louisiana prosecutors were allowed to seek life without parole for juveniles who were convicted of first or second-degree murder. That year a bill was proposed to make juveniles make juvenile lifers eligible for parole after 30 years. It was killed in the Senate. On June 15, 2017 Gov. John Bel Edwards signed the most comprehensive criminal reform package in the state history. It was aimed at shedding the state’s ranking as having the nations highest imprisonment rate.</p><br><br>
 
@@ -218,6 +205,17 @@ cases. It wasn’t until June, 2018 that Chief Justice Stephen Markman, writing 
 without parole in the case of first-degree murder.</p><br><br>
 
 
+
+<!-- second graphic container-->
+<div class="incarceration-graph"><br>
+    <div class="graphic-container">
+      <div class="chart-title"><b>Age of juvenile lifers at release</b></div>
+      <div class="chart-description">Inmates in their 40s and 50s made up the largest wave of juvenile lifers released in Pennsylvania in the years following the 2016 Supreme Court ruling in <span style="font-style: italic;">Montgomery v. Louisiana</span>.</div><br>
+      <div class="chart-author">By CAMILA VELLOSO</div><br>
+    </div>
+    <div id="age-released"></div><br>
+    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
+  </div><br><br>  <!-- END second graphic container-->
 
 <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br><br>
 
@@ -244,33 +242,26 @@ without parole in the case of first-degree murder.</p><br><br>
                ]
              },
              color: {
-               pattern: ['#D9B269', '#78A6DD', '#ee6a4b', '#60c4b2', '#973895']
+               pattern: ['#D9B269', '#689AD9', '#ee6a4b', '#60c4b2', '#973895']
              }
            });
 
-
            var chart2 = c3.generate({
-             bindto: '#age-released',
+              bindto: '#age-released',
                data: {
-                   columns: [
-                       ['# juvenile lifers', 1, 65, 70, 29, 1, 15]
-                   ],
+
+                 columns: [
+                   ['x', '25yrs-40yrs', '25-29yrs-60yrs', '30-39yrs-60yrs', '40yrs-60yrs', '40yrs-75yrs', 'Life'],
+                  ['x', 1, 65, 70, 29, 1, 15]
+                 ],
                    type: 'bar'
                },
-               axis: {
-                   x: {
-                       type: 'category',
-                       categories: ['25yrs-40yrs', '25-29yrs-60yrs', '30-39yrs-60yrs', '40yrs-60yrs', '40yrs-75yrs', 'Life']
-                   },
-                   rotated: true
-               },
+
+
                color: {
-                 pattern: ['#78A6DD', '#D9B168', '#27548C', '#689AD9', '#973895']
-               },
+                 pattern: ['#FFDA94', '#D9B168', '#27548C', '#689AD9', '#973895']
+               }
            });
-
-
-
 
            var chart3 = c3.generate({
              bindto: '#incarceration2',
@@ -283,7 +274,7 @@ without parole in the case of first-degree murder.</p><br><br>
                ]
              },
              color: {
-               pattern: ['#D9B269', '#78A6DD', '#ee6a4b', '#60c4b2', '#973895']
+               pattern: ['#D9B269', '#689AD9', '#ee6a4b', '#60c4b2', '#973895']
              }
            });
 
